# MicrogradCpp

./: .gitignore  CMakeLists.txt  README.md  Value.cpp  Value.h  main.cpp  nn.cpp  nn.h  test.cpp
MicrogradCpp/: Layer.cpp  Layer.h  MLP.cpp  MLP.h  MicrogradCpp.cpp  MicrogradCpp.sln  MicrogradCpp.vcxproj  MicrogradCpp.vcxproj.filters  Module.cpp  Module.h  Neuron.cpp  Neuron.h  Test.cpp  Test.h  Value.cpp  Value.h
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  micrograd_demo
